[package]
name = "serve-rs"
version = "0.2.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
license = "MIT/Apache-2.0"
description = "A basic HTTP file server"
homepage = "https://github.com/meilisearch/serve-rs"
repository = "https://github.com/meilisearch/serve-rs"

[dependencies]
futures = "0.1.14"
futures-cpupool = "0.1.5"
hyper = "0.11"
clap = "2.25.0"
threadpool = "1.4.0"
net2 = "0.2"
libc = "0.2.4"
error-type = "0.1.2"
